--- a/html/index.html
+++ b/html/index.html
@@ -12,33 +12,38 @@
 </body>
 
 <script src="/tiff.raw.js"></script>
-<script src="/tiff.js"></script>
-<script>
+<script type="module">
+    import { TiffTag, TIFFOpen, TIFFClose, TIFFReadRGBAImage, TIFFGetField, TIFFMalloc, TIFFFree } from './tiff.js';
+
     document.querySelector('input').addEventListener('change', async (event) => {
-        const buffer = await event.target.files[0].arrayBuffer();
-        const fname = "image"
-        FS.createDataFile("/", fname, new Uint8Array(buffer), true, false);
-
-        // The following code is a port of the [TIFFRGBAImage Support] example from http://www.libtiff.org/libtiff.html
-
-        const tif = TIFFOpen(fname, "r");
-
-        const width = TIFFGetField(tif, TiffTag.IMAGEWIDTH);
-        const height = TIFFGetField(tif, TiffTag.IMAGELENGTH);
-        const nrOfPixels = width * height;
-        const uint32Size = 4;
-        const raster = TIFFMalloc(nrOfPixels * uint32Size); // output will be RGBA
-        if (!raster) {
-            throw 'TIFFMalloc failed';
-        }
-
+        const disposables = [];
         try {
+            const buffer = await event.target.files[0].arrayBuffer();
+            const fname = "image"
+            FS.createDataFile("/", fname, new Uint8Array(buffer), true, false);
+            disposables.push(() => FS.unlink("/" + fname));
+            // The following code is a port of the [TIFFRGBAImage Support] example from http://www.libtiff.org/libtiff.html
+
+            const tif = TIFFOpen(fname, "r");
+            disposables.push(() => TIFFClose(tif));
+            const orientation = TIFFGetField(tif, TiffTag.ORIENTATION);
+            console.log("Original Orientation: " + orientation);
+            const width = TIFFGetField(tif, TiffTag.IMAGEWIDTH);
+            const height = TIFFGetField(tif, TiffTag.IMAGELENGTH);
+            const nrOfPixels = width * height;
+            const uint32Size = 4;
+            const raster = TIFFMalloc(nrOfPixels * uint32Size); // output will be RGBA
+            if (!raster) {
+                throw 'TIFFMalloc failed';
+            }
+
+            disposables.push(() => TIFFFree(raster));
+
             const stopOnError = true;
             console.log("Reading tiff image");
             if (TIFFReadRGBAImage(tif, width, height, raster, stopOnError)) {
-                console.log("Copying buffer");
+                console.log("Creating Uint8ClampedArray");
                 const data = new Uint8ClampedArray(Module.HEAPU8.buffer, raster, nrOfPixels * uint32Size);
-                console.log(data);
                 console.log("Creating ImageData");
                 const imageData = new ImageData(data, width, height);
                 console.log("Creating Canvas");
@@ -48,15 +53,16 @@
                 document.body.appendChild(canvas);
                 const ctx = canvas.getContext("2d");
                 ctx.putImageData(imageData, 0, 0);
-                ctx.translate(canvas.width, 0);
-                ctx.scale(-1, 1);
             }
             else {
                 throw "TIFFReadRGBAImage failed";
             }
         }
         finally {
-            TIFFFree(raster);
+            while (disposables.length > 0) {
+                const disposable = disposables.pop();
+                disposable();
+            }
         }
     }, false)
 </script>
